--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body {
     to bottom,
     #eafbff 0%,
     #eafbff 50%,
-    #5290f9 50%,
-    #5290f9 100%
+    pink 50%,
+    pink 100%
   );
   font-family: 'Muli', sans-serif;
   display: flex;
@@ -84,7 +84,7 @@ nav ul a {
 }
 
 .icon .line {
-  background-color: #5290f9;
+  background-color: pink;
   height: 2px;
   width: 20px;
   position: absolute;
